--- a/oasis/App.config
+++ b/oasis/App.config
@@ -1,30 +1,45 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Oasis_WF.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <connectionStrings>
-      <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="Data Source=ns3119889.ip-51-38-181.eu;Initial Catalog=oasis;persist security info=True;user id=sa;password=Oasis-689;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
-    <applicationSettings>
-        <Oasis_WF.My.MySettings>
-            <setting name="horizonTraitementObsolete" serializeAs="String">
-                <value>3</value>
-            </setting>
-        </Oasis_WF.My.MySettings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Oasis_WF.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <connectionStrings>
+    <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <applicationSettings>
+    <Oasis_WF.My.MySettings>
+      <setting name="horizonTraitementObsolete" serializeAs="String">
+        <value>3</value>
+      </setting>
+    </Oasis_WF.My.MySettings>
+  </applicationSettings>
   <appSettings>
-    <add key="horizonTraitementObsolete" value="3"/>    <!--< en années -->
-    <add key="longueurStringAllergie" value="12"/>
-    <add key="organisation" value="Oasis"/>
-    <add key="dureeRendezVous" value="15"/>             <!--< en minutes -->
-    <add key="limiteAgeEnfant" value="16"/>
-    <add key="AgeMinPreventionFemme" value="12"/>
-    <add key="DrcIdGrossesse" value="833"/>
+    <add key="horizonTraitementObsolete" value="3" />
+    <!--< en années -->
+    <add key="longueurStringAllergie" value="12" />
+    <add key="organisation" value="Oasis" />
+    <add key="dureeRendezVous" value="15" />
+    <!--< en minutes -->
+    <add key="limiteAgeEnfant" value="16" />
+    <add key="AgeMinPreventionFemme" value="12" />
+    <add key="DrcIdGrossesse" value="833" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
