git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@12 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -168,6 +168,8 @@
     <Compile Include="Bean\Antecedent\AntecedentClass.vb" />
     <Compile Include="Bean\DRC\DrcActeParamedicalAsso.vb" />
     <Compile Include="Bean\DRC\DrcStandard.vb" />
+    <Compile Include="Bean\Utilisateur\Action.vb" />
+    <Compile Include="Dao\Utilisateur\ActionDao.vb" />
     <Compile Include="Form\DRC\RadFActeParamedicalTest.Designer.vb">
       <DependentUpon>RadFActeParamedicalTest.vb</DependentUpon>
     </Compile>
