git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@47 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -324,6 +324,12 @@
     <Compile Include="Form\Episode\RadFEpisodeParametreDetailEdit.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.Designer.vb">
+      <DependentUpon>RadFEpisodeProtocoleAiguDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Workflow\RadFWkfDemandeAvisHisto.Designer.vb">
       <DependentUpon>RadFWkfDemandeAvisHisto.vb</DependentUpon>
     </Compile>
@@ -1069,6 +1075,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Episode\RadFEpisodeParametreDetailEdit.resx">
       <DependentUpon>RadFEpisodeParametreDetailEdit.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.resx">
+      <DependentUpon>RadFEpisodeProtocoleAiguDetail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Workflow\RadFWkfDemandeAvisHisto.resx">
       <DependentUpon>RadFWkfDemandeAvisHisto.vb</DependentUpon>
