--- a/oasis/App.config
+++ b/oasis/App.config
@@ -19,6 +19,7 @@
     </Oasis_WF.My.MySettings>
   </applicationSettings>
   <appSettings>
+    <add key="ServeurOasis" value="ns3119889.ip-51-38-181.eu" />
     <add key="horizonTraitementObsolete" value="3" />
     <!--< en années -->
     <add key="longueurStringAllergie" value="12" />
