git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@60 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -76,7 +76,8 @@
     <Compile Include="ApiRest\Class1.vb" />
     <Compile Include="Bean\Utilisateur\Action.vb" />
     <Compile Include="Bean\Utilisateur\Fonction.vb" />
-    <Compile Include="Bean\Utilisateur\LoginRequest.vb" />
+    <Compile Include="Bean\WebTech\DownloadRequest.vb" />
+    <Compile Include="Bean\WebTech\LoginRequest.vb" />
     <Compile Include="Bean\Utilisateur\Profil.vb" />
     <Compile Include="Bean\Utilisateur\UtilisateurClass.vb" />
     <Compile Include="Dao\StandardDao.vb" />
