git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@86 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -203,6 +203,7 @@
     <Compile Include="Bean\Ordonnance\Ordonnance.vb" />
     <Compile Include="Bean\Ordonnance\OrdonnanceDetailGrid.vb" />
     <Compile Include="Dao\Antecedent\AntecedentOrdreDao.vb" />
+    <Compile Include="Bean\LigneDeVie\LigneDeVie.vb" />
     <Compile Include="Form\DRC\RadFActeParamedicalTest.Designer.vb">
       <DependentUpon>RadFActeParamedicalTest.vb</DependentUpon>
     </Compile>
