git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@94 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -550,10 +550,10 @@
     <Compile Include="Form\Episode\RadFEpisodeDetail.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\LigneDeVie\RadFEpisodeListe.Designer.vb">
-      <DependentUpon>RadFEpisodeListe.vb</DependentUpon>
+    <Compile Include="Form\LigneDeVie\RadFEpisodeLigneDeVie.Designer.vb">
+      <DependentUpon>RadFEpisodeLigneDeVie.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\LigneDeVie\RadFEpisodeListe.vb">
+    <Compile Include="Form\LigneDeVie\RadFEpisodeLigneDeVie.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Medicament\RadFMedocDetail.Designer.vb">
@@ -936,8 +936,8 @@
     <EmbeddedResource Include="Form\Episode\RadFEpisodeDetail.resx">
       <DependentUpon>RadFEpisodeDetail.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\LigneDeVie\RadFEpisodeListe.resx">
-      <DependentUpon>RadFEpisodeListe.vb</DependentUpon>
+    <EmbeddedResource Include="Form\LigneDeVie\RadFEpisodeLigneDeVie.resx">
+      <DependentUpon>RadFEpisodeLigneDeVie.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Medicament\RadFMedocDetail.resx">
       <DependentUpon>RadFMedocDetail.vb</DependentUpon>
