--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -151,6 +151,7 @@
       <HintPath>lib\RCWF\2019.3.1022.40.Trial\Telerik.WinControls.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Telerik.WinControls.ChartView, Version=2019.3.1022.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.GridView, Version=2019.3.1022.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\RCWF\2019.3.1022.40.Trial\Telerik.WinControls.GridView.dll</HintPath>
@@ -366,10 +367,10 @@
     <Compile Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Episode\RadFEpisodeSelecteurContextePatient.Designer.vb">
-      <DependentUpon>RadFEpisodeSelecteurContextePatient.vb</DependentUpon>
+    <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.Designer.vb">
+      <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\Episode\RadFEpisodeSelecteurContextePatient.vb">
+    <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Workflow\RadFWkfDemandeAvisHisto.Designer.vb">
@@ -852,8 +853,8 @@
     <EmbeddedResource Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.resx">
       <DependentUpon>RadFEpisodeProtocoleAiguDetail.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Episode\RadFEpisodeSelecteurContextePatient.resx">
-      <DependentUpon>RadFEpisodeSelecteurContextePatient.vb</DependentUpon>
+    <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieGraphe.resx">
+      <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Workflow\RadFWkfDemandeAvisHisto.resx">
       <DependentUpon>RadFWkfDemandeAvisHisto.vb</DependentUpon>
