git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@103 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/Web.config
+++ b/Oasis_Web/Web.config
@@ -14,7 +14,7 @@
     <add key="FileUploadLocation" value="c:\db\oasis\upload" />
   </appSettings>
   <connectionStrings>
-    <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="Data Source=ns3119889.ip-51-38-181.eu;Initial Catalog=oasis;persist security info=True;user id=sa;password=Oasis-689;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="Data Source=ns3119889.ip-51-38-181.eu;Initial Catalog=oasis;persist security info=True;user id=sa;password=Oasis-689;encrypt=true;trustServerCertificate=true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
