git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@106 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -5,8 +5,8 @@
       <section name="Oasis_WF.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
-  <connectionStrings>
-    <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
+  <connectionStrings >
+  <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -15,6 +15,9 @@
     <Oasis_WF.My.MySettings>
       <setting name="horizonTraitementObsolete" serializeAs="String">
         <value>3</value>
+      </setting>
+      <setting name="Test" serializeAs="String">
+        <value>A</value>
       </setting>
     </Oasis_WF.My.MySettings>
   </applicationSettings>
