git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@111 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -26,6 +26,7 @@
     <add key="horizonTraitementObsolete" value="3" />
     <!--< en années -->
     <add key="longueurStringAllergie" value="12" />
+    <add key="drcIdConclusionIde" value="128001" />
     <add key="organisation" value="Oasis" />
     <add key="dureeRendezVous" value="15" />
     <!--< en minutes -->
