--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -372,6 +372,12 @@
     <Compile Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeConclusionContextePatient.Designer.vb">
+      <DependentUpon>RadFEpisodeConclusionContextePatient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeConclusionContextePatient.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\LigneDeVie\RadFEpisodeParametresCreation.Designer.vb">
       <DependentUpon>RadFEpisodeParametresCreation.vb</DependentUpon>
     </Compile>
@@ -891,6 +897,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Episode\RadFEpisodeProtocoleAiguDetail.resx">
       <DependentUpon>RadFEpisodeProtocoleAiguDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Episode\RadFEpisodeConclusionContextePatient.resx">
+      <DependentUpon>RadFEpisodeConclusionContextePatient.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\LigneDeVie\RadFEpisodeParametresCreation.resx">
       <DependentUpon>RadFEpisodeParametresCreation.vb</DependentUpon>
