git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@119 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -224,6 +224,12 @@
     <Compile Include="Form\DRC\RadFParametreTest.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeConsigneIdeDetail.Designer.vb">
+      <DependentUpon>RadFEpisodeConsigneIdeDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeConsigneIdeDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Episode\RadFEpisodeEnCoursListe.Designer.vb">
       <DependentUpon>RadFEpisodeEnCoursListe.vb</DependentUpon>
     </Compile>
@@ -867,6 +873,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\DRC\RadFParametreTest.resx">
       <DependentUpon>RadFParametreTest.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Episode\RadFEpisodeConsigneIdeDetail.resx">
+      <DependentUpon>RadFEpisodeConsigneIdeDetail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Episode\RadFEpisodeEnCoursListe.resx">
       <DependentUpon>RadFEpisodeEnCoursListe.vb</DependentUpon>
